<resources>

    <string name="ac">AC</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="sub">-</string>
    <string name="per">%</string>
    <string name="del">⌫</string>
    <string name="add">+</string>
    <string name="mul">×</string>
    <string name="dec">.</string>
    <string name="equ">=</string>
    <string name="app_name">Calculator</string>
    <string name="del_desc">Delete last character</string>
    <string name="ac_desc">Clear all</string>
    <string name="per_desc">Percentage</string>
    <string name="div_desc">Divide</string>
    <string name="mul_desc">Multiply</string>
    <string name="sub_desc">Subtract</string>
    <string name="add_desc">Add</string>
    <string name="dec_desc">Decimal point</string>
    <string name="equ_desc">Calculate result</string>
    <string name="div">÷</string>
    <string name="deg">DEG</string>
    <string name="rad">RAD</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="asin">sin⁻¹</string>
    <string name="acos">cos⁻¹</string>
    <string name="atan">tan⁻¹</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="sqrt">√</string>
    <string name="square">x²</string>
    <string name="power">^</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="fact">n!</string>
    <string name="reciprocal">1/x</string>
    <string name="sign">±</string>
    <string name="lparen">(</string>
    <string name="rparen">)</string>
</resources>
